--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@types/expo": "^32.0.8",
+    "@types/react": "^16.8.8",
+    "@types/react-native": "^0.57.38",
+    "@types/react-navigation": "^3.0.4",
+    "tslint": "^5.14.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.3.3333"
   },
   "private": true
 }
