--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-paper": "^2.13.0",
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
