--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-paper": "^2.13.0",
-    "react-navigation": "^3.3.2"
+    "react-navigation": "^3.3.2",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
