--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^32.0.0",
